# foundry-dnd-beyond-rolls-companion

./: .dockerignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  package-lock.json  package.json  server.js
.github/: FUNDING.yml
.github/workflows/: release.yml
k8s/: deployment.yaml  kustomization.yaml  service.yaml
server/: Cargo.toml
server/src/: main.rs
src/: server.mjs
