[package]
name = "server"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "rocket_server"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

